--- a/index.html
+++ b/index.html
@@ -4,12 +4,80 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./css/style.css" />
-        <title>Aisin M. | CV | RSSchool</title>
+        <!-- font-awesome -->
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+        />
+        <!-- normalize -->
+        <link rel="stylesheet" href="./styles/normalize.css" />
+        <!-- main css -->
+        <link rel="stylesheet" href="./styles/main.css" />
+        <!-- scripts -->
+        <script src="./scripts/app.js"></script>
+        <title>CV | Aisin M.</title>
     </head>
     <body>
-        <div class="container">
-            <h1>CV: Aisin M.</h1>
+        <nav class="navbar">
+            <div class="nav-center">
+                <!-- header -->
+                <div class="nav-header">
+                    <a href="index.html" class="nav-logo">
+                        <img src="./images/logo.jpg" alt="logo" />
+                    </a>
+                    <button class="btn nav-btn" type="button">
+                        <i class="fas fa-align-justify"></i>
+                    </button>
+                </div>
+                <!-- links -->
+                <div class="nav-links">
+                    <a href="" class="nav-link">about me</a>
+                    <a href="" class="nav-link">work experience</a>
+                    <a href="" class="nav-link">skills</a>
+                    <a href="" class="nav-link">code examples</a>
+                    <a href="" class="nav-link">projects</a>
+                    <a href="" class="nav-link">courses</a>
+                    <a href="" class="nav-link">education</a>
+                    <a href="" class="nav-link">languages</a>
+                    <div class="btn-wrapper">
+                        <!-- <div class="nav-link contact-link"> -->
+                        <div class="btn btn-contact">contact</div>
+                        <!-- </div> -->
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <!-- contact window -->
+        <div class="modal-overlay">
+            <div class="modal-container">
+                <h3>modal Lorem, ipsum.</h3>
+                <h4>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Quo, magnam temporibus. Quia labore soluta aliquam
+                    reiciendis sapiente nemo sunt voluptates!
+                </h4>
+                <button class="close-btn">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
         </div>
+        <!-- main -->
+        <main>
+            <div class="container">
+                <section class="about">
+                    <h2>about me</h2>
+                    <div class="about-container">
+                        <div class="avatar">
+                            <img src="./images/avatar.jpg" alt="" />
+                        </div>
+                        <div class="contact-info"></div>
+                    </div>
+                </section>
+            </div>
+        </main>
+        <!-- footer -->
+        <footer>
+            <div class="footer-content"></div>
+        </footer>
     </body>
 </html>
