feat: add about section

--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
                 <div class="nav-links">
                     <a href="" class="nav-link">about me</a>
                     <a href="" class="nav-link">work experience</a>
-                    <a href="" class="nav-link">skills</a>
-                    <a href="" class="nav-link">code examples</a>
-                    <a href="" class="nav-link">projects</a>
-                    <a href="" class="nav-link">courses</a>
                     <a href="" class="nav-link">education</a>
+                    <a href="" class="nav-link">skills</a>
+                    <a href="" class="nav-link">code style</a>
+                    <a href="" class="nav-link">courses</a>
                     <a href="" class="nav-link">languages</a>
                     <div class="btn-wrapper">
                         <!-- <div class="nav-link contact-link"> -->
@@ -50,12 +49,14 @@
         <!-- contact window -->
         <div class="modal-overlay">
             <div class="modal-container">
-                <h3>modal Lorem, ipsum.</h3>
-                <h4>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Quo, magnam temporibus. Quia labore soluta aliquam
-                    reiciendis sapiente nemo sunt voluptates!
-                </h4>
+                <h2>Maksim Aisin</h2>
+                <p>Junior Fronted Developer</p>
+                <i class="fas fa-mobile-alt">+7 916 070 56 87</i>
+                <i class="far fa-envelope">maksim.aisin@mail.ru</i>
+                <i class="fab fa-github">
+                    <a href="https://github.com/TavaniX">TavaniX</a>
+                </i>
+                <i class="fab fa-discord">TavaniX</i>
                 <button class="close-btn">
                     <i class="fas fa-times"></i>
                 </button>
@@ -70,7 +71,26 @@
                         <div class="avatar">
                             <img src="./images/avatar.jpg" alt="" />
                         </div>
-                        <div class="contact-info"></div>
+                        <div class="contact-info">
+                            <span>Hi, my name is Maksim.</span>
+                            <span>
+                                I've been studying web development since 2020.
+                                Since then I have gained solid understanding of
+                                the software development life cycle, various
+                                development methodologies (Agile values and
+                                Scrum approach), version control management
+                                systems, QA principles, the structures of the
+                                client server applications, and the structure of
+                                the request / response and the HTTP methods. Of
+                                course as I'm interested in frontend development
+                                I enjoy learning HTML/CSS/JS a lot (please see
+                                some of projects here). I’m ready to compensate
+                                the lack of work experience in web development
+                                by quick learning, curiosity, perseverance, high
+                                productivity and communication skills. I’m a
+                                strong team player.
+                            </span>
+                        </div>
                     </div>
                 </section>
             </div>
