feat: add work experience section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <!-- main -->
         <main>
             <div class="container">
-                <section class="about">
+                <section class="section-container about">
                     <h2>about me</h2>
                     <div class="about-container">
                         <div class="avatar">
@@ -79,19 +79,48 @@
                                 the software development life cycle, various
                                 development methodologies (Agile values and
                                 Scrum approach), version control management
-                                systems, QA principles, the structures of the
-                                client server applications, and the structure of
-                                the request / response and the HTTP methods. Of
-                                course as I'm interested in frontend development
-                                I enjoy learning HTML/CSS/JS a lot (please see
-                                some of projects here). I’m ready to compensate
-                                the lack of work experience in web development
-                                by quick learning, curiosity, perseverance, high
-                                productivity and communication skills. I’m a
-                                strong team player.
+                                systems (Git), QA principles, the structures of
+                                the client server applications, and the
+                                structure of the request / response and the HTTP
+                                methods. Of course as I'm interested in frontend
+                                development I enjoy learning HTML/CSS/JS a lot
+                                (please see some of projects here). I'm ready to
+                                compensate the lack of work experience in web
+                                development by quick learning, curiosity,
+                                perseverance, high productivity and
+                                communication skills. I'm a strong team player.
                             </span>
                         </div>
                     </div>
+                </section>
+                <section class="section-container work">
+                    <h2>work experience</h2>
+                    <p>
+                        My work experience is basically related to HR function
+                        (in FMCG, Retail, International airport) – I’ve been
+                        working in budgeting and reporting streams starting from
+                        2014 on various positions (beginning as specialist,
+                        growing to a head of department with 4 direct reports).
+                    </p>
+                    <p>
+                        During my career I have been always participating in
+                        cross-functional IT projects on implementation of new
+                        systems and tools or upgrade to a new version. My main
+                        focus was identification of business/user needs,
+                        validation of system requirements specification, testing
+                        (functional, regression and integration testing),
+                        analysis of defects and control of their fixing, user
+                        acceptance testing and preparation for product
+                        deployment (communication campaign, writing user manuals
+                        and conducting end-user trainings).
+                    </p>
+                    <p>
+                        But it started to seem to me complicated (building and
+                        deploying standalone applications) after one project,
+                        where we developed a solution, which allowed to use web
+                        browser. That was the moment when I started to take a
+                        deep interest in web development and my journey began!
+                    </p>
                 </section>
             </div>
         </main>
