fix: change layout positioning

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
         />
+        <!-- fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,400;1,400;1,500&display=swap"
+            rel="stylesheet"
+        />
         <!-- normalize -->
         <link rel="stylesheet" href="./styles/normalize.css" />
         <!-- main css -->
@@ -33,10 +40,10 @@
                 <div class="nav-links">
                     <a href="" class="nav-link">about me</a>
                     <a href="" class="nav-link">work experience</a>
-                    <a href="" class="nav-link">education</a>
                     <a href="" class="nav-link">skills</a>
                     <a href="" class="nav-link">code style</a>
                     <a href="" class="nav-link">courses</a>
+                    <a href="" class="nav-link">education</a>
                     <a href="" class="nav-link">languages</a>
                     <div class="btn-wrapper">
                         <!-- <div class="nav-link contact-link"> -->
@@ -121,6 +128,26 @@
                         browser. That was the moment when I started to take a
                         deep interest in web development and my journey began!
                     </p>
+                </section>
+                <section class="section-container skills">
+                    <h2>skills</h2>
+                    <p></p>
+                </section>
+                <section class="section-container code">
+                    <h2>code style</h2>
+                    <p></p>
+                </section>
+                <section class="section-container courses">
+                    <h2>courses</h2>
+                    <p></p>
+                </section>
+                <section class="section-container education">
+                    <h2>education</h2>
+                    <p></p>
+                </section>
+                <section class="section-container languages">
+                    <h2>languages</h2>
+                    <p></p>
                 </section>
             </div>
         </main>
