feat: add data to skills section

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                     <a href="" class="nav-link">work experience</a>
                     <a href="" class="nav-link">skills</a>
                     <a href="" class="nav-link">code style</a>
+                    <a href="" class="nav-link">projects</a>
                     <a href="" class="nav-link">courses</a>
                     <a href="" class="nav-link">education</a>
                     <a href="" class="nav-link">languages</a>
@@ -131,10 +132,49 @@
                 </section>
                 <section class="section-container skills">
                     <h2>skills</h2>
-                    <p></p>
+                    <div class="skills-container">
+                        <div>
+                            <ul>
+                                <li><i class="fab fa-html5">HTML5</i></li>
+                                <li><i class="fab fa-css3-alt"></i>CSS3</li>
+                                <li>
+                                    <i class="fab fa-js-square"
+                                        >JavaScript (ES6)</i
+                                    >
+                                </li>
+                                <li>
+                                    <i class="fab fa-react"></i>React (with
+                                    Redux)
+                                </li>
+                            </ul>
+                        </div>
+                        <div>
+                            <ul>
+                                <li>
+                                    <i class="fab fa-git-alt"></i>Git. GitHub.
+                                </li>
+                                <li>
+                                    <i class="fas fa-database"></i>SQL (MySQL,
+                                    PostgreSQL, MongoDB)
+                                </li>
+                                <li>
+                                    <i class="fab fa-node-js"></i>NodeJS
+                                    (beginner)
+                                </li>
+                                <li>
+                                    <i class="fas fa-code"></i>Understanding of
+                                    software development lifecycle
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </section>
                 <section class="section-container code">
                     <h2>code style</h2>
+                    <p></p>
+                </section>
+                <section class="section-container projects">
+                    <h2>projects</h2>
                     <p></p>
                 </section>
                 <section class="section-container courses">
@@ -152,7 +192,7 @@
             </div>
         </main>
         <!-- footer -->
-        <footer>
+        <footer class="section-container">
             <div class="footer-content"></div>
         </footer>
     </body>
