--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
         <!-- main -->
         <main>
             <div class="container">
+                <section>
+                    <h1>Curriculum Vitae</h1>
+                </section>
                 <section class="section-container about">
                     <h2>about me</h2>
                     <div class="about-container">
