feat: code, projects, courses sections add

--- a/index.html
+++ b/index.html
@@ -174,15 +174,87 @@
                 </section>
                 <section class="section-container code">
                     <h2>code style</h2>
-                    <p></p>
+                    <p><em>Descending Order</em></p>
+                    <p>
+                        Your task is to make a function that can take any
+                        non-negative integer as an argument and return it with
+                        its digits in descending order. Essentially, rearrange
+                        the digits to create the highest possible number.
+                    </p>
+                    <pre>
+                        <code>
+    function descendingOrder(n){
+    return parseInt([...n.toString()].sort().reverse().join(''))
+    }
+                        </code>
+                    </pre>
                 </section>
                 <section class="section-container projects">
                     <h2>projects</h2>
-                    <p></p>
+                    <ul>
+                        <li>
+                            <a
+                                href="https://github.com/TavaniX/tavanix.github.io"
+                                target="_blank"
+                                >Vanilla JS</a
+                            >
+                        </li>
+                        <li>
+                            <a
+                                href="https://github.com/TavaniX/cra-burger-shop"
+                                target="_blank"
+                                >CRA Burger Shop</a
+                            >
+                        </li>
+                        <li>
+                            <a
+                                href="https://github.com/TavaniX/cra-shop-amado"
+                                target="_blank"
+                                >CRA Furniture Shop</a
+                            >
+                        </li>
+                    </ul>
                 </section>
                 <section class="section-container courses">
                     <h2>courses</h2>
-                    <p></p>
+                    <ul>
+                        <li>
+                            <a
+                                href="https://rs.school/js-stage0/"
+                                target="_blank"
+                                >RS Schools Course «JavaScript/Frontend. Stage
+                                0»</a
+                            >
+                            (in progress)
+                        </li>
+                        <li>
+                            <a
+                                href="https://www.udemy.com/course/javascript-tutorial-for-beginners-w/"
+                                target="_blank"
+                                >Udemy</a
+                            >
+                            (in progress)
+                        </li>
+                        <li>
+                            HackerU: Fullstack Web Developer:
+                            <ol>
+                                <li class="liLink">
+                                    <a
+                                        href="https://disk.yandex.ru/i/v_Waa1o6LU5q0g"
+                                        target="_blank"
+                                        >Certificate</a
+                                    >
+                                </li>
+                                <li class="liLink">
+                                    <a
+                                        href="https://disk.yandex.ru/i/9Ia2_Gro3q2odQ"
+                                        target="_blank"
+                                        >Diploma</a
+                                    >
+                                </li>
+                            </ol>
+                        </li>
+                    </ul>
                 </section>
                 <section class="section-container education">
                     <h2>education</h2>
