feat: education, languages sections add

--- a/index.html
+++ b/index.html
@@ -258,11 +258,27 @@
                 </section>
                 <section class="section-container education">
                     <h2>education</h2>
-                    <p></p>
+                    <span
+                        ><b>
+                            2015 - Computer Training Center "Specialist" at
+                            Bauman Moscow State Technical University
+                        </b></span
+                    ><br />
+                    <span><i>Database development and administration</i></span>
+                    <span
+                        ><br /><br /><b>
+                            2012 - Moscow Humanitarian-Economic Institute,
+                            Moscow
+                        </b></span
+                    ><br />
+                    <span><i>Master's degree in Finance, Economist</i></span>
                 </section>
                 <section class="section-container languages">
                     <h2>languages</h2>
-                    <p></p>
+                    <ul>
+                        <li>English - fluent (B+)</li>
+                        <li>Russian - native</li>
+                    </ul>
                 </section>
             </div>
         </main>
