feat: add footer

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         <div>
                             <ul>
                                 <li>
-                                    <i class="fab fa-git-alt"></i>Git. GitHub.
+                                    <i class="fab fa-github"></i>Git. GitHub.
                                 </li>
                                 <li>
                                     <i class="fas fa-database"></i>SQL (MySQL,
@@ -284,7 +284,21 @@
         </main>
         <!-- footer -->
         <footer class="section-container">
-            <div class="footer-content"></div>
+            <div class="footer-content">
+                <div class="copyright">&copy; 2021 by Maksim Aisin</div>
+                <div class="gitlink">
+                    <a href="https://github.com/TavaniX" target="_blank">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </div>
+                <div class="logo">
+                    <a href="https://rs.school/js/" target="_blank">
+                        <img
+                            src="https://rs.school/images/rs_school_js.svg"
+                            alt="RS School"
+                    /></a>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
