feat: add skills visual stars

--- a/index.html
+++ b/index.html
@@ -136,39 +136,107 @@
                 <section class="section-container skills">
                     <h2>skills</h2>
                     <div class="skills-container">
-                        <div>
+                        <div class="first">
                             <ul>
-                                <li><i class="fab fa-html5">HTML5</i></li>
-                                <li><i class="fab fa-css3-alt"></i>CSS3</li>
                                 <li>
-                                    <i class="fab fa-js-square"
-                                        >JavaScript (ES6)</i
-                                    >
+                                    <i class="fab fa-html5 skillIcons"></i>HTML5
                                 </li>
                                 <li>
-                                    <i class="fab fa-react"></i>React (with
-                                    Redux)
+                                    <i class="fab fa-css3-alt skillIcons"></i
+                                    >CSS3
+                                </li>
+                                <li>
+                                    <i class="fab fa-js-square skillIcons"></i
+                                    >JavaScript (ES6)
+                                </li>
+                                <li>
+                                    <i class="fab fa-react skillIcons"></i>React
+                                    (with Redux)
                                 </li>
                             </ul>
                         </div>
-                        <div>
+                        <div class="second">
+                            <div class="icon-stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                            <div class="icon-stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                            <div class="icon-stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                            <div class="icon-stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                                <i class="far fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                        </div>
+                        <div class="third">
                             <ul>
                                 <li>
-                                    <i class="fab fa-github"></i>Git. GitHub.
+                                    <i class="fab fa-github skillIcons"></i>Git.
+                                    GitHub.
                                 </li>
                                 <li>
-                                    <i class="fas fa-database"></i>SQL (MySQL,
-                                    PostgreSQL, MongoDB)
+                                    <i class="fab fa-node-js skillIcons"></i
+                                    >NodeJS (beginner)
                                 </li>
                                 <li>
-                                    <i class="fab fa-node-js"></i>NodeJS
-                                    (beginner)
+                                    <i class="fas fa-database skillIcons"></i
+                                    >SQL (MySQL, PostgreSQL, MongoDB)
                                 </li>
                                 <li>
-                                    <i class="fas fa-code"></i>Understanding of
-                                    software development lifecycle
+                                    <i
+                                        class="fas fa-code skillIcons devIcon"
+                                    ></i
+                                    >Understanding of software development
+                                    lifecycle
                                 </li>
                             </ul>
+                        </div>
+                        <div class="fourth">
+                            <div class="icon-stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                                <i class="far fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                            <div class="icon-stars">
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                                <i class="far fa-star"></i>
+                                <i class="far fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                            <div class="icon-stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                                <i class="far fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                            <div class="icon-stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                                <i class="far fa-star"></i>
+                            </div>
                         </div>
                     </div>
                 </section>
@@ -196,6 +264,7 @@
                             <a
                                 href="https://github.com/TavaniX/tavanix.github.io"
                                 target="_blank"
+                                class="a-link"
                                 >Vanilla JS</a
                             >
                         </li>
@@ -203,6 +272,7 @@
                             <a
                                 href="https://github.com/TavaniX/cra-burger-shop"
                                 target="_blank"
+                                class="a-link"
                                 >CRA Burger Shop</a
                             >
                         </li>
@@ -210,6 +280,7 @@
                             <a
                                 href="https://github.com/TavaniX/cra-shop-amado"
                                 target="_blank"
+                                class="a-link"
                                 >CRA Furniture Shop</a
                             >
                         </li>
@@ -222,6 +293,7 @@
                             <a
                                 href="https://rs.school/js-stage0/"
                                 target="_blank"
+                                class="a-link"
                                 >RS Schools Course «JavaScript/Frontend. Stage
                                 0»</a
                             >
@@ -231,6 +303,7 @@
                             <a
                                 href="https://www.udemy.com/course/javascript-tutorial-for-beginners-w/"
                                 target="_blank"
+                                class="a-link"
                                 >Udemy</a
                             >
                             (in progress)
@@ -242,6 +315,7 @@
                                     <a
                                         href="https://disk.yandex.ru/i/v_Waa1o6LU5q0g"
                                         target="_blank"
+                                        class="a-link"
                                         >Certificate</a
                                     >
                                 </li>
@@ -249,6 +323,7 @@
                                     <a
                                         href="https://disk.yandex.ru/i/9Ia2_Gro3q2odQ"
                                         target="_blank"
+                                        class="a-link"
                                         >Diploma</a
                                     >
                                 </li>
@@ -287,7 +362,11 @@
             <div class="footer-content">
                 <div class="copyright">&copy; 2021 by Maksim Aisin</div>
                 <div class="gitlink">
-                    <a href="https://github.com/TavaniX" target="_blank">
+                    <a
+                        href="https://github.com/TavaniX"
+                        target="_blank"
+                        class="a-link"
+                    >
                         <i class="fab fa-github"></i>
                     </a>
                 </div>
