--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
                 </div>
                 <!-- links -->
                 <div class="nav-links">
-                    <a href="" class="nav-link">about me</a>
-                    <a href="" class="nav-link">work experience</a>
-                    <a href="" class="nav-link">skills</a>
-                    <a href="" class="nav-link">code style</a>
-                    <a href="" class="nav-link">projects</a>
-                    <a href="" class="nav-link">courses</a>
-                    <a href="" class="nav-link">education</a>
-                    <a href="" class="nav-link">languages</a>
+                    <a href="#anchorAbout" class="nav-link">about me</a>
+                    <a href="#anchorWork" class="nav-link">work experience</a>
+                    <a href="#anchorSkills" class="nav-link">skills</a>
+                    <a href="#anchorCode" class="nav-link">code style</a>
+                    <a href="#anchorProjects" class="nav-link">projects</a>
+                    <a href="#anchorCourses" class="nav-link">courses</a>
+                    <a href="#anchorEducation" class="nav-link">education</a>
+                    <a href="#anchorLanguages" class="nav-link">languages</a>
                     <div class="btn-wrapper">
                         <!-- <div class="nav-link contact-link"> -->
                         <div class="btn btn-contact">contact</div>
@@ -76,7 +76,7 @@
                 <section>
                     <h1>Curriculum Vitae</h1>
                 </section>
-                <section class="section-container about">
+                <section class="section-container about" id="anchorAbout">
                     <h2>about me</h2>
                     <div class="about-container">
                         <div class="avatar">
@@ -104,7 +104,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="section-container work">
+                <section class="section-container work" id="anchorWork">
                     <h2>work experience</h2>
                     <p>
                         My work experience is basically related to HR function
@@ -133,7 +133,7 @@
                         deep interest in web development and my journey began!
                     </p>
                 </section>
-                <section class="section-container skills">
+                <section class="section-container skills" id="anchorSkills">
                     <h2>skills</h2>
                     <div class="skills-container">
                         <div class="first">
@@ -188,12 +188,11 @@
                         <div class="third">
                             <ul>
                                 <li>
-                                    <i class="fab fa-github skillIcons"></i>Git.
-                                    GitHub.
+                                    <i class="fab fa-git-alt skillIcons"></i>Git
                                 </li>
                                 <li>
                                     <i class="fab fa-node-js skillIcons"></i
-                                    >NodeJS (beginner)
+                                    >NodeJS
                                 </li>
                                 <li>
                                     <i class="fas fa-database skillIcons"></i
@@ -240,7 +239,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="section-container code">
+                <section class="section-container code" id="anchorCode">
                     <h2>code style</h2>
                     <p><em>Descending Order</em></p>
                     <p>
@@ -257,7 +256,7 @@
                         </code>
                     </pre>
                 </section>
-                <section class="section-container projects">
+                <section class="section-container projects" id="anchorProjects">
                     <h2>projects</h2>
                     <ul>
                         <li>
@@ -286,7 +285,7 @@
                         </li>
                     </ul>
                 </section>
-                <section class="section-container courses">
+                <section class="section-container courses" id="anchorCourses">
                     <h2>courses</h2>
                     <ul>
                         <li>
@@ -331,7 +330,10 @@
                         </li>
                     </ul>
                 </section>
-                <section class="section-container education">
+                <section
+                    class="section-container education"
+                    id="anchorEducation"
+                >
                     <h2>education</h2>
                     <span
                         ><b>
@@ -348,7 +350,10 @@
                     ><br />
                     <span><i>Master's degree in Finance, Economist</i></span>
                 </section>
-                <section class="section-container languages">
+                <section
+                    class="section-container languages"
+                    id="anchorLanguages"
+                >
                     <h2>languages</h2>
                     <ul>
                         <li>English - fluent (B+)</li>
