feat: add scroll functionality

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <script src="./scripts/app.js"></script>
         <title>CV | Aisin M.</title>
     </head>
-    <body>
+    <body id="top">
         <nav class="navbar">
             <div class="nav-center">
                 <!-- header -->
@@ -353,7 +353,7 @@
                 >
                     <h2>languages</h2>
                     <ul>
-                        <li>English - fluent (B+)</li>
+                        <li>English - fluent</li>
                         <li>Russian - native</li>
                     </ul>
                 </section>
