feat: add to top button functionality

--- a/index.html
+++ b/index.html
@@ -381,5 +381,8 @@
                 </div>
             </div>
         </footer>
+        <a href="#" class="top" title="top">
+            <i class="fas fa-caret-square-up"></i>
+        </a>
     </body>
 </html>
