refactor: contact items layout

--- a/index.html
+++ b/index.html
@@ -54,14 +54,32 @@
         <!-- contact window -->
         <div class="modal-overlay">
             <div class="modal-container">
-                <h2>Maksim Aisin</h2>
-                <p>Junior Fronted Developer</p>
-                <i class="fas fa-mobile-alt">+7 916 070 56 87</i>
-                <i class="far fa-envelope">maksim.aisin@mail.ru</i>
-                <i class="fab fa-github">
-                    <a href="https://github.com/TavaniX">TavaniX</a>
-                </i>
-                <i class="fab fa-discord">TavaniX</i>
+                <div class="persinfo">
+                    <h3 id="myname">Maksim Aisin</h3>
+                    <span id="position">Junior Fronted Developer</span>
+                </div>
+                <div class="contact-info-container">
+                    <div>
+                        <i class="fas fa-mobile-alt icon-contact"></i
+                        ><span>+7 916 070 56 87</span>
+                    </div>
+                    <div>
+                        <i class="far fa-envelope icon-contact"></i
+                        ><span>maksim.aisin@mail.ru</span>
+                    </div>
+                    <div>
+                        <i class="fab fa-github icon-contact"> </i
+                        ><span
+                            ><a href="https://github.com/TavaniX"
+                                >TavaniX</a
+                            ></span
+                        >
+                    </div>
+                    <div>
+                        <i class="fab fa-discord icon-contact"></i
+                        ><span>TavaniX</span>
+                    </div>
+                </div>
                 <button class="close-btn">
                     <i class="fas fa-times"></i>
                 </button>
