--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <h2>about me</h2>
                     <div class="about-container">
                         <div class="avatar">
-                            <img src="./images/avatar.jpg" alt="" />
+                            <img src="./images/avatar.jpg" alt="Maksim Aisin" />
                         </div>
                         <div class="contact-info">
                             <span>Hi, my name is Maksim.</span>
