fix: edit contact info

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <i class="fab fa-github icon-contact"> </i
                         ><span
                             ><a href="https://github.com/TavaniX"
-                                >TavaniX</a
+                                target="_blank">TavaniX</a
                             ></span
                         >
                     </div>
