--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="modal-container">
                 <div class="persinfo">
                     <h3 id="myname">Maksim Aisin</h3>
-                    <span id="position">Junior Fronted Developer</span>
+                    <span id="position">Junior Frontend Developer</span>
                 </div>
                 <div class="contact-info-container">
                     <div>
@@ -70,7 +70,9 @@
                     <div>
                         <i class="fab fa-github icon-contact"> </i
                         ><span
-                            ><a href="https://github.com/TavaniX"
+                            ><a
+                                href="https://github.com/TavaniX"
+                                target="_blank"
                                 >TavaniX</a
                             ></span
                         >
