--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
                     <a href="#anchorAbout" class="nav-link">about me</a>
                     <a href="#anchorWork" class="nav-link">work experience</a>
                     <a href="#anchorSkills" class="nav-link">skills</a>
-                    <a href="#anchorCode" class="nav-link">code style</a>
                     <a href="#anchorProjects" class="nav-link">projects</a>
                     <a href="#anchorCourses" class="nav-link">courses</a>
                     <a href="#anchorEducation" class="nav-link">education</a>
@@ -112,10 +111,11 @@
                                 structure of the request / response and the HTTP
                                 methods. Of course as I'm interested in frontend
                                 development I enjoy learning HTML/CSS/JS a lot
-                                (please see some of projects here). I'm ready to
-                                compensate the lack of work experience in web
-                                development by quick learning, curiosity,
-                                perseverance, high productivity and
+                                <a href="#anchorProjects"
+                                    >(please see some of the projects here)</a
+                                >. I'm ready to compensate the lack of work
+                                experience in web development by quick learning,
+                                curiosity, perseverance, high productivity and
                                 communication skills. I'm a strong team player.
                             </span>
                         </div>
@@ -168,7 +168,6 @@
                                 </li>
                                 <li>
                                     <i class="fab fa-react skillIcons"></i>React
-                                    (with Redux)
                                 </li>
                             </ul>
                         </div>
@@ -256,48 +255,24 @@
                         </div>
                     </div>
                 </section>
-                <section class="section-container code" id="anchorCode">
-                    <h2>code style</h2>
-                    <p><em>Descending Order</em></p>
-                    <p>
-                        Your task is to make a function that can take any
-                        non-negative integer as an argument and return it with
-                        its digits in descending order. Essentially, rearrange
-                        the digits to create the highest possible number.
-                    </p>
-                    <pre>
-                        <code>
-    function descendingOrder(n){
-        return parseInt([...n.toString()].sort().reverse().join(''))
-    }
-                        </code>
-                    </pre>
-                </section>
+
                 <section class="section-container projects" id="anchorProjects">
                     <h2>projects</h2>
                     <ul>
                         <li>
                             <a
-                                href="https://github.com/TavaniX/tavanix.github.io"
+                                href="https://tavanix.github.io/chuck-jokes-api/"
                                 target="_blank"
                                 class="a-link"
-                                >Vanilla JS</a
+                                >Chuck Jokes API</a
                             >
                         </li>
                         <li>
                             <a
-                                href="https://github.com/TavaniX/cra-burger-shop"
+                                href="https://tavanix.github.io/virtual-keyboard/"
                                 target="_blank"
                                 class="a-link"
-                                >CRA Burger Shop</a
-                            >
-                        </li>
-                        <li>
-                            <a
-                                href="https://github.com/TavaniX/cra-shop-amado"
-                                target="_blank"
-                                class="a-link"
-                                >CRA Furniture Shop</a
+                                >Virtual Keyboard</a
                             >
                         </li>
                     </ul>
@@ -307,11 +282,10 @@
                     <ul>
                         <li>
                             <a
-                                href="https://rs.school/js-stage0/"
+                                href="https://www.udemy.com/course/react-tutorial-and-projects-course/"
                                 target="_blank"
                                 class="a-link"
-                                >RS Schools Course «JavaScript/Frontend. Stage
-                                0»</a
+                                >Udemy: React</a
                             >
                             (in progress)
                         </li>
@@ -320,9 +294,19 @@
                                 href="https://www.udemy.com/course/javascript-tutorial-for-beginners-w/"
                                 target="_blank"
                                 class="a-link"
-                                >Udemy</a
+                                >Udemy: Vanilla JS</a
                             >
-                            (in progress)
+                            (completed)
+                        </li>
+                        <li>
+                            <a
+                                href="https://rs.school/"
+                                target="_blank"
+                                class="a-link"
+                                >RS Schools Course «JavaScript/Frontend. Stage
+                                1»</a
+                            >
+                            (completed)
                         </li>
                         <li>
                             HackerU: Fullstack Web Developer:
@@ -382,7 +366,6 @@
         <!-- footer -->
         <footer class="section-container">
             <div class="footer-content">
-                <div class="copyright">&copy; 2021 by Maksim Aisin</div>
                 <div class="gitlink">
                     <a
                         href="https://github.com/TavaniX"
@@ -391,13 +374,6 @@
                     >
                         <i class="fab fa-github"></i>
                     </a>
-                </div>
-                <div class="logo">
-                    <a href="https://rs.school/js/" target="_blank">
-                        <img
-                            src="https://rs.school/images/rs_school_js.svg"
-                            alt="RS School"
-                    /></a>
                 </div>
             </div>
         </footer>
